--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  font-family: "Ubuntu";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo {
+  width: 254px;
+  height: 36px;
+  left: 135px;
+  top: 49px;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fb3f6c;
+}
+
+.nav-ele {
+  width: 100px;
+  height: 18px;
+  left: 508px;
+  top: 59px;
+
+  font-style: normal;
+  font-size: 16px;
+
+  color: #747582;
 }
